--- a/kotlinClient/src/main/resources/application.properties
+++ b/kotlinClient/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.main.web-application-type=none
+pokeapi_base_url=https://pokeapi.co/api/v2/pokemon/
+oauth2.issuer=http://localhost:8080/auth/realms/test
+oauth2.client_id=test
+oauth2.client_secret=vXFxVdSslINGg93rrqpWrIguOWHJ7Jd4
+grpc_host=localhost:8086
